added current playing to get rooms
